fixed layout issue

--- a/main.css
+++ b/main.css
@@ -2,6 +2,10 @@
     display: grid;
     grid-template-columns: 100px auto 100px;
     grid-template-rows: repeat(3, 100px);
-    grid-gap: 100px;
-    border: black;
+    grid-gap: 1em;
+    
+  }
+
+  header, footer {
+    grid-column: 1 / 4;
   }
